# kuhl-haus-bedrock-api

./: .coveragerc  .gitignore  .pdm-python  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-image.yml  publish-to-pypi.yml
docs/: conf.py  index.rst
src/kuhl_haus/bedrock/api/: __init__.py
tests/: test_env.py
tests/routers/: test_chat.py  test_embeddings.py  test_model.py
