[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "kuhl-haus-bedrock-api"
version = "0.1.0"
description = "OpenAI-compatible REST API using AWS Bedrock as a backend"
authors = [
  { name = "Tom Pounders", email = "git@oldschool.engineer" },
]
readme = "README.rst"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
dependencies = [
    "kuhl-haus-bedrock-app",
    "kuhl-haus-metrics"
]
# dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/kuhl-haus"
Documentation = "https://github.com/kuhl-haus/kuhl-haus-bedrock-api/wiki"
Source = "https://github.com/kuhl-haus/kuhl-haus-bedrock-api"
Changelog = "https://github.com/kuhl-haus/kuhl-haus-bedrock-api/commits"
Tracker = "https://github.com/kuhl-haus/kuhl-haus-bedrock-api/issues"

[project.optional-dependencies]
testing = [
    "setuptools",
    "pytest",
    "pytest-cov"
]

# [project.scripts]
# script-name = "kuhl_haus.bedrock.api.module:function"
# fibonacci = "kuhl_haus.bedrock.api.skeleton:run"

[tool.setuptools]
zip-safe = true
include-package-data = true
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = ["tests"]}}

# [tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
# version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
addopts = "--verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.devpi.upload]
no_vcs = 1
formats = ["bdist_wheel"]

[tool.flake8]
max_line_length = 88
extend_ignore = ["E203", "W503"]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pyscaffold]
version = "4.6"
package = "api"
extensions = ["namespace"]
namespace = "kuhl_haus.bedrock"
